overflow fix, scpsl navbar font fix

--- a/index.css
+++ b/index.css
@@ -28,7 +28,6 @@ html, body {
 }
 body {
     overflow-x: hidden;
-    overflow-y: hidden;
     text-decoration: none;
 }
 * {
@@ -37,10 +36,11 @@ body {
 .bg {
     background-position: center center;
     background-repeat: repeat;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: calc(100vh - 4em);
     background-size: 100%;
     position: absolute;
+    z-index: -1;
 }
 #ctbmbg {
     background-image: url(/img/background.jpg);
